--- a/app/ui/Wind/Wind.module.css
+++ b/app/ui/Wind/Wind.module.css
@@ -1,6 +1,6 @@
 .wxCards {
 	width: 100%;
-	max-width: 450px;
+	max-width: 600px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 0.25rem;
@@ -10,8 +10,12 @@
 	grid-column: span 2;
 }
 
-@media (max-width: 480px) {
-	.wxCards > * {
-		grid-column: span 2;
+@media (max-width: 700px) {
+	.wxCards {
+		max-width: 450px;
+		grid-template-columns: 1fr;
+	}
+	.wxCards > :first-child {
+		grid-column: span 1;
 	}
 }
